--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <h1>Pizza!</h1>
     <p>My Favorite Toppings: </p>
     <ul>
-      <li>Pepperoni</li>
       <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Onion</li>
+      <li>Black Olive</li>
+      <li>Tomato</li>
     </ul>
   </div>
 </div>
